# Generalised-Sky-Survey

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MEMORY.md  README.md  build_landing.py  build_review.py  build_skymap.py  crossmatch_candidates.py  db.py  docker-compose.yml  export_candidates.py  features.py  features_gaia.py  features_wise.py  global_features.py  landing.html  pyproject.toml  quickstart.md  rank_tracking.py  requirements.txt  run_pipeline.py  scan_tile.py  scan_tile_gaia.py  scan_tile_wise.py  schema.sql  score_candidates.py  survey.db-shm  survey.db-wal  thumbnails.py  triage.py  wise_cutouts.py
startup/: init_db.py  populate.py
